--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 					<tr>
 						<td width="40%">
-							<img style="height: 200px;width: 200px;border-radius: 20%;" src="pic.jpg">
+							<img style="height: 200px;width: 200px;border-radius: 20%;" src="https://github.com/Munna015/Portfolio-CSE-4120-/blob/main/Pic.jpg">
 							<p style="color: white;">Date of Birth: 14 march,1999</p>
 						</td>
 
